err/voitto.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tappio'...
Listing './lib/python3.5/site-packages/tappio/scripts'...
Compiling './lib/python3.5/site-packages/tappio/scripts/missing_accounts.py'...
***   File "./lib/python3.5/site-packages/tappio/scripts/missing_accounts.py", line 49
    print "{account_num}: ALL  {fmt_filenames}".format(**locals())
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tappio/scripts/print_accounts.py'...
***   File "./lib/python3.5/site-packages/tappio/scripts/print_accounts.py", line 12
    print "%s%d %s" % (" "*indent, account.number, account.name)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/voitto'...
Listing './lib/python3.5/site-packages/voitto/helpers'...
Compiling './lib/python3.5/site-packages/voitto/helpers/tracer.py'...
***   File "./lib/python3.5/site-packages/voitto/helpers/tracer.py", line 9
    print "%s%s%s" % (indent, funcname, inspect.formatargvalues(*args))
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/voitto-0.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
